--- a/index.html
+++ b/index.html
@@ -24,38 +24,38 @@
 				<p>Sign up to get a course from the LowLife Base Crew. With this course, you will jump all four BASE objects: buildings, antennas, spans, and earth. You will jump in four different states over the course of two months. Along with the course, you will get free lifetime membership from ALL of the members of the LowLife BASE Crew. Start your journey today!</p>
 				</div>
 			<div class="lower">
-				<form>
+				<form onSubmit = "return checkPassword(this)">
 					<div class="shadowbox">
 					<h2>Sign up for the LowLife BASE Course Now!</h2>
 					<section class="inputs">
 						<div class="row-one row">
 					<p>
 					<label for="first-name">First Name</label>
-					<input type="text" id="first-name" name="first-name">
+					<input type="text" id="first-name" name="first-name" required>
 					</p>
 					<p>
 						<label for="last-name">Last Name</label>
-						<input type="text" id="last-name" name="last-name">
+						<input type="text" id="last-name" name="last-name" required>
 					</p>
 				</div>
 				<div class="row-two row">
 					<p>
 						<label for="email">Email</label>
-						<input type="email" id="email" name="email">
+						<input type="email" id="email" name="email" required>
 					</p>
 					<p>
 						<label for="phone-number">Phone Number</label>
-						<input type="tel" id="phone-number" name="phone-number">
+						<input type="tel" id="phone-number" name="phone-number" required>
 					</p>
 				</div>
 				<div class="row-three row">
 					<p>
-						<label for="password">Password</label>
-						<input type="password" id="password" name="password">
+						<label for="password1">Password</label>
+						<input type="password" id="password1" name="password1" required>
 					</p>
 					<p>
-						<label for="conf-pass">Confirm Password</label>
-						<input type="password" id="conf-pass" name="conf-pass">
+						<label for="password2">Confirm Password</label>
+						<input type="password" id="password2" name="password2" required>
 					</p>
 				</div>
 				</section>
@@ -66,5 +66,17 @@
 				</form>
 		</div>
 	</div>
+	<script>
+		function checkPassword(form) {
+                password1 = form.password1.value;
+                password2 = form.password2.value
+								if (password1 != password2) {
+                    alert ("\nPassword did not match: Please try again...")
+                    return false;
+								} else {
+                    return true;
+										}
+									};
+	</script>
 </body>
 </html>
